# nexus-edge

./: .env.example  Cargo.toml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_user_table.rs
src/: graphql.rs  lib.rs  main.rs  model.rs  seed.rs
src/graphql/: auth.rs  errors.rs  mod.rs
src/utils/: encryption.rs  jwt.rs  mod.rs
static/: embeddable-sandbox.umd.production.min.js
