[package]
name = "nexus-edge"
version = "0.0.1"
edition = "2024"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
serde = { version = "1.0", features = ["derive"] }
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
axum = "0.8.4"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
sea-orm = { version = "1.1.11", features = [
    'sqlx-sqlite',
    'runtime-tokio-native-tls',
    "macros",
] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
thiserror = "2.0.12"
argon2 = "0.5.3"
rand = "0.9.1"
